# framework

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  TODO  main.py  mapping_registry.json  pyproject.toml  pyrightconfig.json  shelf_framework.py  test.md
.githooks/: _branch_scope.sh  pre-commit  pre-push
.shelf/: settings.jsonc
artifacts/: summary.json
docs/: MBRD对象级对应实施说明.md  architecture.md  assumptions.md  data_station_shared_module_relations.md  examples.md  four-layer-architecture.md  full_rewrite_exec_plan.md  github-launch-kit.md  governance_second_round_audit_report.md  governance_tree_validation_plan.md  group.html  groups.html  logic_record.json  math_model.md  project_discovery_audit.md  python_candidate_scanner_rules.md  run_summary.json  shelf_2x2x2.json  shelf_2x2x2_group_detail.html  shelf_2x2x2_viewer.html  shelf_visual_report.html  shelf_visualization_dashboard.html  shelf_visualization_data.json  shelf_visualization_report.md  shelf方案总览与简化评估.md  slides_outline.md  type.html  全链实现框架与跳转逻辑详解.md  四层重构实施说明.md  当前仓库完整实现方案与提示词对照审计.md  数学公式与分型计数详解.md  框架到代码映射与反查覆盖说明.md  知识库工作台链路对齐说明.md  给其它AI的Shelf仓库全景说明.md
docx/: framework问题.txt  数据库持久化与Framework边界讨论-原始对话版.md
framework/: L0-M0-字符串匹配模块.sf
framework_drafts/: README.md
mapping/: mapping_registry.json
projects/: README.md
scripts/: build_framework_to_code_mapping_presentation.py  build_shelf_ai_plugin_presentation.py  configure_branch_protection.sh  generate_evidence_tree_hierarchy.py  generate_framework_scaffold.py  generate_framework_tree_hierarchy.py  generate_module_hierarchy_html.py  (+12 more)
(+1262 files in other folders)
